--- a/mobile/themes/default/css/style.css
+++ b/mobile/themes/default/css/style.css
@@ -697,7 +697,7 @@ top:0.5em; }
 .footer .favLink a{margin-right:0.3rem;color: #aaa;}
 .bottom-mg{margin-bottom:13%;}
 /*底部返回*/
-.footer .back-top{overflow: hidden;position: fixed;bottom:110px;right: 0px; opacity:0;}
+.footer .back-top{overflow: hidden;position: fixed;bottom:110px;right: 0px; opacity:0; z-index:2;}
 /*.footer .gotop2{position:relative;width:50px;height:50px;color:#333;font-size:10px; display:block; border-radius:25px; border:1px solid #e8e8e8;}
 .footer .gotop2 span{position:absolute;left:50%;top:13px;width:13px;height:14px;margin:-4px 0 0 -4px;background-position:0 -140px;}  
 .footer .gotop2 p{position:absolute;bottom:4px;left:4px;width:42px;}
